force-app/main/default/objects/Bus_Work_Order__c/Bus_Work_Order__c.object-meta.xml
<CustomObject>
    <description>The work Order Line items related to PDI (bus wise), On-site visit, Training</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Service Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>