force-app/main/default/objects/Bus_Work_Order__c/fields/Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To get the assigned resource for this bus work order</description>
    <label>Assigned Resource</label>
    <referenceTo>AssignedResource</referenceTo>
    <relationshipName>Bus_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>