force-app/main/default/objects/Bus_Work_Order__c/fields/Aux_Coolant_Heater_Inspection_if_equippe__c.field-meta.xml
<CustomField>
    <fullName>Aux_Coolant_Heater_Inspection_if_equippe__c</fullName>
    <description>Aux Coolant Heater Inspection if equipped</description>
    <inlineHelpText>Aux Coolant Heater Inspection if equipped</inlineHelpText>
    <label>Aux Coolant Heater Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>