force-app/main/default/objects/Bus_Work_Order__c/fields/Bleed_Steering__c.field-meta.xml
<CustomField>
    <fullName>Bleed_Steering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bleed Steering</label>
    <type>Checkbox</type>
</CustomField>