force-app/main/default/objects/Bus_Work_Order__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipName>Bus_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>