force-app/main/default/objects/Bus_Work_Order__c/fields/Bus_Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Bus_Work_Order_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Bus Work Order Number</label>
    <type>AutoNumber</type>
</CustomField>