force-app/main/default/objects/Bus_Work_Order__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>TextArea</type>
</CustomField>