force-app/main/default/objects/Bus_Work_Order__c/fields/Check_Battery_SOC__c.field-meta.xml
<CustomField>
    <fullName>Check_Battery_SOC__c</fullName>
    <label>Check Battery SOC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>