force-app/main/default/objects/Bus_Work_Order__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>When the status of a Bus Work Order is Closed, the date is auto filled</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>