force-app/main/default/objects/Bus_Work_Order__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>The Problem SubCode</description>
    <label>Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Defect_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Problem_Sub_Code</valueSetName>
    </valueSet>
</CustomField>