force-app/main/default/objects/Bus_Work_Order__c/fields/Complain__c.field-meta.xml
<CustomField>
    <fullName>Complain__c</fullName>
    <label>Complaint</label>
    <length>250</length>
    <type>Text</type>
</CustomField>