force-app/main/default/objects/Bus_Work_Order__c/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>Corrective Action</label>
    <length>250</length>
    <type>Text</type>
</CustomField>