force-app/main/default/objects/Bus_Work_Order__c/fields/Defect_Code__c.field-meta.xml
<CustomField>
    <fullName>Defect_Code__c</fullName>
    <description>Problem Code</description>
    <label>Defect Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Problem_Code</valueSetName>
    </valueSet>
</CustomField>