force-app/main/default/objects/Bus_Work_Order__c/fields/ECP_Coolant_Level_Check__c.field-meta.xml
<CustomField>
    <fullName>ECP_Coolant_Level_Check__c</fullName>
    <label>ECP Coolant Level Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>