force-app/main/default/objects/Bus_Work_Order__c/fields/FSR_Email__c.field-meta.xml
<CustomField>
    <fullName>FSR_Email__c</fullName>
    <label>FSR Email</label>
    <type>Email</type>
</CustomField>