force-app/main/default/objects/Bus_Work_Order__c/fields/HVAC_Coolant_Level_Inspection__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Coolant_Level_Inspection__c</fullName>
    <label>HVAC Coolant Level Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>