force-app/main/default/objects/Bus_Work_Order__c/fields/Inform_to_Wash_Underside__c.field-meta.xml
<CustomField>
    <fullName>Inform_to_Wash_Underside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inform to Wash Underside</label>
    <type>Checkbox</type>
</CustomField>