force-app/main/default/objects/Bus_Work_Order__c/fields/Inspect_for_fluid_leaks__c.field-meta.xml
<CustomField>
    <fullName>Inspect_for_fluid_leaks__c</fullName>
    <label>Inspect for fluid leaks</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>