force-app/main/default/objects/Bus_Work_Order__c/fields/Install_Fuel_Poppets__c.field-meta.xml
<CustomField>
    <fullName>Install_Fuel_Poppets__c</fullName>
    <label>Install Fuel Poppets</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>