force-app/main/default/objects/Bus_Work_Order__c/fields/Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoicing</label>
    <type>Checkbox</type>
</CustomField>