force-app/main/default/objects/Bus_Work_Order__c/fields/Issue_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Issue_Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issue Fixed</label>
    <type>Checkbox</type>
</CustomField>