force-app/main/default/objects/Bus_Work_Order__c/fields/Knowledge_Articles__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Articles__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipName>Bus_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>