force-app/main/default/objects/Bus_Work_Order__c/fields/Locate_1_4_turn__c.field-meta.xml
<CustomField>
    <fullName>Locate_1_4_turn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locate 1/4 turn valve on rear curbside a</label>
    <type>Checkbox</type>
</CustomField>