force-app/main/default/objects/Bus_Work_Order__c/fields/LOTO_Customer_Training__c.field-meta.xml
<CustomField>
    <fullName>LOTO_Customer_Training__c</fullName>
    <label>LOTO Customer Training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>