force-app/main/default/objects/Bus_Work_Order__c/fields/Measure_AC_Belt_Tension__c.field-meta.xml
<CustomField>
    <fullName>Measure_AC_Belt_Tension__c</fullName>
    <label>Measure AC Belt Tension</label>
    <length>250</length>
    <type>Text</type>
</CustomField>