force-app/main/default/objects/Bus_Work_Order__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>