force-app/main/default/objects/Bus_Work_Order__c/fields/Orientation_Training__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientation Training</label>
    <type>Checkbox</type>
</CustomField>