force-app/main/default/objects/Bus_Work_Order__c/fields/PDI_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>PDI_Complete_Date__c</fullName>
    <description>When the Status is updated to &quot;Closed&quot;.</description>
    <formula>IF(  ISPICKVAL(Status__c, &quot;Closed&quot;), TODAY(),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When the Status is updated to &quot;Closed&quot;.</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>