force-app/main/default/objects/Bus_Work_Order__c/fields/PDI_Owner__c.field-meta.xml
<CustomField>
    <fullName>PDI_Owner__c</fullName>
    <label>PDI Owner</label>
    <length>25</length>
    <type>Text</type>
</CustomField>