force-app/main/default/objects/Bus_Work_Order__c/fields/PDI_Plan__c.field-meta.xml
<CustomField>
    <fullName>PDI_Plan__c</fullName>
    <label>PDI Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDI BEB</fullName>
            </value>
            <value>
                <fullName>PDI CNG</fullName>
            </value>
            <value>
                <fullName>PDI Hybrid</fullName>
            </value>
            <value>
                <fullName>PDI Diesel</fullName>
            </value>
            <value>
                <fullName>PDI Issues</fullName>
            </value>
            <value>
                <fullName>PCO</fullName>
            </value>
            <value>
                <fullName>Ship Short</fullName>
            </value>
            <value>
                <fullName>Customer Training</fullName>
                <isActive>false</isActive>
                <label>Customer Training</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Vendor Training</fullName>
                <isActive>false</isActive>
                <label>Vendor Training</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>