force-app/main/default/objects/Bus_Work_Order__c/fields/Perform_Walk_Around_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Perform_Walk_Around_Inspection__c</fullName>
    <description>Perform Walk Around Inspection for damage during transport or loading / unloading</description>
    <inlineHelpText>Perform Walk Around Inspection for damage during transport or loading / unloading</inlineHelpText>
    <label>Perform Walk Around Inspection</label>
    <length>250</length>
    <type>Text</type>
</CustomField>