force-app/main/default/objects/Bus_Work_Order__c/fields/Printed_Material_Required__c.field-meta.xml
<CustomField>
    <fullName>Printed_Material_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Printed Material Required</label>
    <type>Checkbox</type>
</CustomField>