force-app/main/default/objects/Bus_Work_Order__c/fields/Provide_Letter_of_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Provide_Letter_of_Acceptance__c</fullName>
    <label>Provide Letter of Acceptance</label>
    <type>Date</type>
</CustomField>