force-app/main/default/objects/Bus_Work_Order__c/fields/Proximity_Sensors_press_button_on_MFD__c.field-meta.xml
<CustomField>
    <fullName>Proximity_Sensors_press_button_on_MFD__c</fullName>
    <label>Proximity Sensors press button on MFD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>