force-app/main/default/objects/Bus_Work_Order__c/fields/Required_Training_Aids__c.field-meta.xml
<CustomField>
    <fullName>Required_Training_Aids__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Training Aids</label>
    <type>Checkbox</type>
</CustomField>