force-app/main/default/objects/Bus_Work_Order__c/fields/Review_Class_Syllabus__c.field-meta.xml
<CustomField>
    <fullName>Review_Class_Syllabus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Class Syllabus</label>
    <type>Checkbox</type>
</CustomField>