force-app/main/default/objects/Bus_Work_Order__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipName>Bus_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>