force-app/main/default/objects/Bus_Work_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Open&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Diagnostic</fullName>
                <isActive>false</isActive>
                <label>Diagnostic</label>
            </value>
            <value>
                <fullName>Parts</fullName>
                <isActive>false</isActive>
                <label>Parts</label>
            </value>
            <value>
                <fullName>Quality Check</fullName>
                <isActive>false</isActive>
                <label>Quality Check</label>
            </value>
            <value>
                <fullName>Repair</fullName>
                <isActive>false</isActive>
                <label>Repair</label>
            </value>
            <value>
                <fullName>Triage</fullName>
                <isActive>false</isActive>
                <label>Triage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>