force-app/main/default/objects/Bus_Work_Order__c/fields/Student_Attendance_List__c.field-meta.xml
<CustomField>
    <fullName>Student_Attendance_List__c</fullName>
    <label>Student Attendance List</label>
    <length>250</length>
    <type>Text</type>
</CustomField>