force-app/main/default/objects/Bus_Work_Order__c/fields/Template_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>Template_Service_Report__c</fullName>
    <label>Template Service Report</label>
    <length>250</length>
    <type>Text</type>
</CustomField>