force-app/main/default/objects/Bus_Work_Order__c/fields/Training_Classes__c.field-meta.xml
<CustomField>
    <fullName>Training_Classes__c</fullName>
    <description>The Different Training Classes offered for Customers and Vendors</description>
    <label>Training Classes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Training_Plan__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operator Instruction</fullName>
            </value>
            <value>
                <fullName>Gillig Battery Electric Bus Operator Training</fullName>
            </value>
            <value>
                <fullName>Maintenance Department General Vehicle Orientation</fullName>
            </value>
            <value>
                <fullName>Gillig Battery Electric Bus Service Personnel Training</fullName>
            </value>
            <value>
                <fullName>Air Systems and Brake</fullName>
            </value>
            <value>
                <fullName>Basic Bus Electrical System</fullName>
            </value>
            <value>
                <fullName>Multiplex Electrical System</fullName>
            </value>
            <value>
                <fullName>CNG System</fullName>
            </value>
            <value>
                <fullName>Hydraulic System</fullName>
            </value>
            <value>
                <fullName>EFAN System</fullName>
            </value>
            <value>
                <fullName>Allison Hybrid Familiarization</fullName>
            </value>
            <value>
                <fullName>BAE hybrid Familiarization</fullName>
            </value>
            <value>
                <fullName>Gillig Emissions</fullName>
            </value>
            <value>
                <fullName>Entrance/Exit Door Systems</fullName>
            </value>
            <value>
                <fullName>Gillig Battery Electric Bus Technician Training</fullName>
            </value>
            <value>
                <fullName>Cummins</fullName>
            </value>
            <value>
                <fullName>Allison Hybrid</fullName>
            </value>
            <value>
                <fullName>Allison Transmisions</fullName>
            </value>
            <value>
                <fullName>Voith</fullName>
            </value>
            <value>
                <fullName>Meritor Axle / Wheel End</fullName>
            </value>
            <value>
                <fullName>ZF</fullName>
            </value>
            <value>
                <fullName>Thermo King</fullName>
            </value>
            <value>
                <fullName>Lift-U</fullName>
            </value>
            <value>
                <fullName>Ricon - Wheel Chair</fullName>
            </value>
            <value>
                <fullName>Vapor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>