force-app/main/default/objects/Bus_Work_Order__c/fields/Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>Training_Plan__c</fullName>
    <label>Training Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>