force-app/main/default/objects/Bus_Work_Order__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bus_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>