force-app/main/default/objects/Bus_Work_Order__c/fields/VIN_Number__c.field-meta.xml
<CustomField>
    <fullName>VIN_Number__c</fullName>
    <label>VIN Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>