force-app/main/default/objects/Bus_Work_Order__c/fields/Work_Plan_type__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan_type__c</fullName>
    <label>Work Plan type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDI</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>On Site Visit</fullName>
            </value>
            <value>
                <fullName>Sales Demo</fullName>
            </value>
            <value>
                <fullName>In Office</fullName>
            </value>
            <value>
                <fullName>PDI Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>